# model-training

./: .gitignore  .pylintrc  README.md  data.dvc  dvc.yaml  models.dvc  params.json  pyproject.toml  report.txt  requirements.txt
.dvc/: config
.github/workflows/: ci.yml  linters.yml  pylint.yml  pylinters.yml
src/: client_secrets.json  download_data.py  get_data.py  import_deps.py  model.py  process_data.py  train.py
tests/: gen_data.py  gen_mutamorphic_data.py  model_service.py  mutamorphic_urls.txt  test_data_slices.py  test_model.py  test_mutamorphic.py
tests/testdata/: .gitignore  http_top100.txt  https_top100.txt
