[project]
name = "model-training"
version = "0.1.0"
description = "Url phishing CNN"
authors = []
requires-python = ">=3.12"
readme = "README.md"

[project.dependencies]
absl-py = "2.1.0"
aiohttp = "3.9.5"
aiohttp-retry = "2.8.3"
aiosignal = "1.3.1"
amqp = "5.2.0"
annotated-types = "0.6.0"
antlr4-python3-runtime = "4.9.3"
appdirs = "1.4.4"
astunparse = "1.6.3"
async-timeout = "4.0.3"
asyncssh = "2.14.2"
atpublic = "4.1.0"
attrs = "23.2.0"
backports-zoneinfo = "0.2.1"
beautifulsoup4 = "4.12.3"
billiard = "4.2.0"
cachetools = "5.3.3"
celery = "5.4.0"
certifi = "2024.2.2"
cffi = "1.16.0"
charset-normalizer = "3.3.2"
click = "8.1.7"
click-didyoumean = "0.3.1"
click-plugins = "1.1.1"
click-repl = "0.3.0"
colorama = "0.4.6"
configobj = "5.0.8"
cryptography = "42.0.7"
dictdiffer = "0.9.0"
diskcache = "5.6.3"
distro = "1.9.0"
dpath = "2.1.6"
dulwich = "0.22.1"
dvc = "3.42.0"
dvc-data = "3.8.0"
dvc-gdrive = "3.0.1"
dvc-http = "2.32.0"
dvc-objects = "3.0.6"
dvc-render = "1.0.1"
dvc-studio-client = "0.20.0"
dvc-task = "0.4.0"
entrypoints = "0.4"
filelock = "3.14.0"
flatbuffers = "24.3.25"
flatten-dict = "0.4.2"
flufl-lock = "7.1.1"
frozenlist = "1.4.1"
fsspec = "2024.3.1"
funcy = "2.0"
gast = "0.4.0"
gdown = "5.2.0"
gitdb = "4.0.11"
gitpython = "3.1.43"
google-api-core = "2.19.0"
google-api-python-client = "2.129.0"
google-auth = "2.29.0"
google-auth-httplib2 = "0.2.0"
google-auth-oauthlib = "1.0.0"
google-pasta = "0.2.0"
googleapis-common-protos = "1.63.0"
grandalf = "0.8"
grpcio = "1.63.0"
gto = "1.6.2"
h5py = "3.11.0"
httplib2 = "0.22.0"
hydra-core = "1.3.2"
idna = "3.7"
importlib-metadata = "7.1.0"
importlib-resources = "6.4.0"
iterative-telemetry = "0.0.8"
joblib = "1.4.2"
keras = "3.3.1"
kombu = "5.3.7"
libclang = "18.1.1"
markdown = "3.6"
markdown-it-py = "3.0.0"
markupsafe = "2.1.5"
mdurl = "0.1.2"
multidict = "6.0.5"
networkx = "3.1"
numpy = "1.24.3"
oauth2client = "4.1.3"
oauthlib = "3.2.2"
omegaconf = "2.3.0"
opt-einsum = "3.3.0"
orjson = "3.10.3"
packaging = "24.0"
pathspec = "0.12.1"
platformdirs = "3.11.0"
prompt-toolkit = "3.0.43"
proto-plus = "1.23.0"
protobuf = "4.25.3"
psutil = "5.9.8"
pyasn1 = "0.6.0"
pyasn1-modules = "0.4.0"
pycparser = "2.22"
pydantic = "2.7.1"
pydantic-core = "2.18.2"
pydot = "2.0.0"
pydrive2 = "1.19.0"
pygit2 = "1.13.3"
pygments = "2.18.0"
pygtrie = "2.5.0"
pyopenssl = "24.1.0"
pyparsing = "3.1.2"
pysocks = "1.7.1"
python-dateutil = "2.9.0.post0"
pyyaml = "6.0.1"
requests = "2.31.0"
requests-oauthlib = "2.0.0"
rich = "13.7.1"
rsa = "4.9"
ruamel-yaml = "0.18.6"
ruamel-yaml-clib = "0.2.8"
scikit-learn = "1.4.1"
scipy = "1.10.1"
scmrepo = "2.0.4"
semver = "3.0.2"
setuptools = "69.5.1"
shellingham = "1.5.4"
shortuuid = "1.0.13"
shtab = "1.7.1"
six = "1.16.0"
smmap = "5.0.1"
soupsieve = "2.5"
sqltrie = "0.11.0"
tabulate = "0.9.0"
tensorboard = "2.13.0"
tensorboard-data-server = "0.7.2"
tensorflow = "2.16.0"
tensorflow-estimator = "2.13.0"
tensorflow-io-gcs-filesystem = "0.34.0"
termcolor = "2.4.0"
threadpoolctl = "3.5.0"
tomlkit = "0.12.5"
tqdm = "4.66.4"
typer = "0.12.3"
typing-extensions = "4.11.0"
tzdata = "2024.1"
uritemplate = "4.1.1"
urllib3 = "2.2.1"
vine = "5.1.0"
voluptuous = "0.14.2"
wcwidth = "0.2.13"
werkzeug = "3.0.3"
wheel = "0.43.0"
wrapt = "1.16.0"
yarl = "1.9.4"
zc-lockfile = "3.0.post1"
zipp = "3.18.1"
